--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>cobot_statistics</title>
     <script src="ext-4.10/ext-all-debug.js"></script>
-    <link rel="stylesheet" href="ext-4.10/resources/css/ext-all.css">
+
+    <link rel="stylesheet" href="ext-4.10/resources/css/ext-all-scoped.css">
+    <link rel="stylesheet" href="ext-4.10/css/01.css" />
     <script type="text/javascript" src="app.js"></script>
 </head>
 <body></body>
