--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,7 +7,7 @@
     <script src="ext-4.10/ext-all-debug.js"></script>
 
     <link rel="stylesheet" href="ext-4.10/resources/css/ext-all-scoped.css">
-    <link rel="stylesheet" href="ext-4.10/css/01.css" />
+    <link rel="stylesheet" href="ext-4.10/css/ext-my.css" />
     <script type="text/javascript" src="app.js"></script>
 </head>
 <body></body>
