--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>cobot_statistics</title>
+    <title>cobot-统计</title>
     <script src="ext-4.10/ext-all-debug.js"></script>
 
     <link rel="stylesheet" href="ext-4.10/resources/css/ext-all-scoped.css">
